--- a/PAVAN/style.css
+++ b/PAVAN/style.css
@@ -1,49 +1,58 @@
-*{
+* {
     margin: 0;
     padding: 0;
     scroll-behavior: smooth !important;
     text-decoration: none !important;
 }
-.hero{
+
+.hero {
     width: 100% !important;
     height: 80vh !important;
-    background: linear-gradient(rgba(0,0,0,0.60),rgba(0,0,0,0.60)), url(zxy.jpg) !important;
+    background: linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)), url(zxy.jpg) !important;
     background-size: cover !important;
     background-position: center !important;
 }
-.navbar-brand{
+
+.navbar-brand {
     color: navy !important;
     font-weight: bolder;
     font-size: 25px !important;
     margin-left: 15px !important;
 }
-.navbar .navbar-nav{
+
+.navbar .navbar-nav {
     margin: 0 auto;
 }
-.navbar .nav-item a{
+
+.navbar .nav-item a {
     color: rgb(8, 8, 129) !important;
     font-size: 15px;
     font-weight: 600;
 }
-.btn{
-    margin-right:  25px !important;
+
+.btn {
+    margin-right: 25px !important;
     border: 1px solid navy !important;
     color: navy !important;
     font-weight: bolder !important;
 }
-.btn:hover{
+
+.btn:hover {
     background-color: navy !important;
     color: white !important;
 }
-.h2{
+
+.h2 {
     color: #fff;
     margin-top: 200px !important;
 }
-.h2-sub-text{
+
+.h2-sub-text {
     color: #fff;
     /* text-align: center !important; */
 }
-.btn-primary{
+
+.btn-primary {
     background-color: transparent !important;
     color: #fff !important;
     border: 1px solid #fff !important;
@@ -52,47 +61,59 @@
     border-radius: 25px !important;
     /* width: 20%; */
 }
-.btn-primary:hover{
+
+.btn-primary:hover {
     background-color: #fff !important;
     color: navy !important;
     border: 1px solid #fff !important;
 }
-.container{
+
+.container {
     margin-bottom: 80px !important;
 }
-.h1{
+
+.h1 {
     margin-top: 55px !important;
     color: navy !important;
     font-weight: bolder !important;
 }
-.col{
+
+.col {
     margin-top: 90px !important;
     color: navy !important;
 }
-.col:hover{
+
+.col:hover {
     background-color: navy !important;
     color: #fff !important;
     scale: 1.1;
     transition: 0.5s !important;
     cursor: pointer;
 }
-i{
+
+i {
     font-size: 35px !important;
     margin-top: 10px;
 }
-.h3,p{
+
+.h3,
+p {
     margin-top: 20px !important;
 }
-.px-4{
+
+.px-4 {
     margin-top: 90px !important;
 }
-.img-fluid{
+
+.img-fluid {
     margin-top: 50px !important;
 }
-.about-text{
+
+.about-text {
     color: navy;
 }
-.clearfix{
+
+.clearfix {
     margin-top: 90px !important;
     margin-bottom: 50px !important;
 }
